CHANGES.txt - 06/05/2000
------------------------

CHANGES IN HTMLDOC v1.8.8

    NEW FEATURES

	- Added support for PDF security/encryption!

    CHANGES

	- Added missing casts in htmllib.cxx that were causing a
	  compile warning with some compilers.
	- No longer draw borders around empty cells in tables..
	- Now disable the TOC tab when using webpage mode.

    BUG FIXES

	- Nested tables didn't take into account the table border
	  width, spacing, or padding values.


CHANGES IN HTMLDOC v1.8.7

    NEW FEATURES

	- The configure script now uses the local PNG, ZLIB,
	  and/or JPEG libraries when they are new enough.
	- The configure script now uses the -fno-rtti,
	  -fno-exceptions, and -fpermissive options as needed
	  with GCC (smaller, faster executables, works around X
	  header bugs in Solaris.)
	- Added a --toctitle option to set the table-of-contents
	  title from the command-line (was only available in the
	  GUI in previous releases...)
	- New "<!-- NEED amount -->" comment to force a page
	  feed if there is not sufficient room on the page for
	  the following text.
	- Page comments are now supported in tables.
	- Table rows are now allocated dynamically, MAX_ROWS at
	  a time.

    CHANGES

	- Increased default MAX_PAGES to 10000 (was 5000.)
	- File links in book files now point to the top of the
	  next page.
	- <TABLE ALIGN=xyz> now aligns the table (previously it
	  just set the default alignment of cells.)
	- Transparent GIFs now use the body color instead of white
	  for the transparent color.
	- Updated to LIBPNG 1.0.6 in source distribution.
	- Updated the default cellpadding to be 1 pixel to match
	  Netscape output.
	- Updated line and block spacing to match Netscape.
	- DL/DT/DD output now matches browsers (was indented from
	  browser output.)
	- Now only output link (A) style if it is set to "none".
	  Otherwise Netscape would underline all targets as well
	  as links.
	- Increased the MAX_COLUMNS constant to 200, and dropped